# cheddar-experiments

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
samples/: CMakeLists.txt  alexnet-tiny.mlir  alexnet-tiny.py  alexnet-tiny_cheddar.mlir  matvec.cpp  matvec.mlir  matvec_8x8_cheddar.cpp  matvec_8x8_cheddar.mlir  matvec_identity.cpp  matvec_identity.mlir  sumf.cpp  sumf.mlir  sumf_cheddar.cpp
samples/alexnet-tiny/: CMakeLists.txt  alexnet-tiny.py  alexnet-tiny_cheddar.cpp  alexnet-tiny_tests.py
tests/: CMakeLists.txt  alexnet-tiny_profile.cpp  alexnet-tiny_tests.cpp  matvec_8x8_tests.cpp  mv_identity_test.cpp  sumf_test.cpp
